# yield-wars-magicblock

./: .cursorrules  .gitignore  LICENSE  README.md  TODO.md  system_design.md
yield-wars-program/: Anchor.toml  Cargo.toml  package-lock.json  package.json
yield-wars-program/programs-ecs/components/lottery-prize/: Cargo.toml
yield-wars-program/programs-ecs/components/ownership/: Cargo.toml
yield-wars-program/programs-ecs/components/position/: Cargo.toml
yield-wars-program/programs-ecs/components/price/: Cargo.toml
yield-wars-program/programs-ecs/components/production/: Cargo.toml
yield-wars-program/programs-ecs/components/stakeable/: Cargo.toml
yield-wars-program/programs-ecs/components/upgradeable/: Cargo.toml
yield-wars-program/programs-ecs/components/wallet/: Cargo.toml
yield-wars-program/programs-ecs/systems/assign-ownership/: Cargo.toml
yield-wars-program/programs-ecs/systems/assign-ownership/src/: lib.rs
yield-wars-program/programs-ecs/systems/economy/: Cargo.toml
yield-wars-program/programs-ecs/systems/leaderboard/: Cargo.toml
yield-wars-program/programs-ecs/systems/leaderboard/src/: lib.rs
yield-wars-program/programs-ecs/systems/lottery/: Cargo.toml
yield-wars-program/programs-ecs/systems/lottery/src/: instructions.rs  lib.rs
yield-wars-program/programs-ecs/systems/market/: Cargo.toml
yield-wars-program/programs-ecs/systems/movement/: Cargo.toml
yield-wars-program/programs-ecs/systems/price-action/: Cargo.toml
yield-wars-program/programs-ecs/systems/resource-production/: Cargo.toml
yield-wars-program/programs-ecs/systems/staking/: Cargo.toml
yield-wars-program/programs-ecs/systems/staking/src/: lib.rs
yield-wars-program/programs-ecs/systems/upgrade/: Cargo.toml
yield-wars-program/programs-ecs/systems/upgrade/src/: lib.rs
yield-wars-program/programs/vrf-client/: Cargo.toml
yield-wars-program/programs/vrf-client/src/: instruction.rs  lib.rs
yield-wars-program/programs/yield-wars-program/: Cargo.toml
yield-wars-program/programs/yield-wars-program/src/: lib.rs
yield-wars-program/scripts/: setup-soar.ts  soar-config.json
yield-wars-program/tests/: integration-tests.ts  leaderboard-test.ts  lottery-tests.ts  vrf-client.ts  yield-wars-program.ts
yield-wars-ui/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  test.json
yield-wars-ui/docs/: marketplace_page_prd.md  supply_shack_inventory_prd.md  supply_shack_shop_prd.md  wallet_function_integration.md
yield-wars-ui/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
yield-wars-ui/src/app/actions/: exchangeCurrency.ts  fetchComponents.ts  fetchWalletBalance.ts  getWalletGpus.ts  initializeNewWorld.ts  initializeUserWallet.ts  initializeUserWalletServer.ts  purchaseGpu.ts  transferCurrency.ts
yield-wars-ui/src/app/backend/: page.tsx
yield-wars-ui/src/app/bolt-diagnostics/: page.tsx
yield-wars-ui/src/app/home/: page.tsx
yield-wars-ui/src/app/leaderboard/: page.tsx
yield-wars-ui/src/app/marketplace/: page.tsx
yield-wars-ui/src/app/pda-monitor/: page.tsx
yield-wars-ui/src/app/scratch/: page.tsx
yield-wars-ui/src/app/supply-shack/: page.tsx
yield-wars-ui/src/app/test-monitor/: page.tsx
yield-wars-ui/src/components/: WalletInitializer.tsx
yield-wars-ui/src/components/cards/: ResourcesCard.tsx  SquadsReferralsCard.tsx
yield-wars-ui/src/components/globes/: 2d-globe.tsx  globe.tsx
yield-wars-ui/src/components/home/: ComingSoonTerminal.tsx  WaitlistTerminal.tsx
yield-wars-ui/src/components/layout/: Footer.tsx  GasContainer.tsx  Header.tsx  LoginContainer.tsx  WalletProviderWrapper.tsx
yield-wars-ui/src/components/marketplace/: ExchangeChart.tsx  ExchangeContainer.tsx  ExchangeDebugInfo.tsx  ExchangeForm.tsx
yield-wars-ui/src/components/navigation/: MobileNav.tsx
yield-wars-ui/src/constants/: soar.ts
yield-wars-ui/src/engine/: MagicBlockEngine.ts  MagicBlockEngineProvider.tsx  MagicBlockQueue.ts
yield-wars-ui/src/hooks/: useAchievements.ts  useEmptyWallet.ts  useSignAndSendTransaction.ts  useSoar.ts  useTerminalCommands.ts  useTransferCurrency.ts  useWaitlist.ts  useWalletGpus.ts
yield-wars-ui/src/lib/: assets.ts  commands.ts  consts.ts  formatters.ts  google-sheets-app-script.js  map-data.json  markers.ts  types.ts
yield-wars-ui/src/models/: commands.ts
yield-wars-ui/src/stores/: store.ts
yield-wars-ui/src/utils/: bolt-decoder-enhanced.ts  bolt-decoder.ts  check-transaction.ts  validator-check.ts
(+115 files in other folders)
