[package]
name = "vrf-client"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
ephemeral-vrf-sdk = { path = "/Users/marcelofeitoza/Development/solana/compute-labs/ephemeral-vrf/sdk", features = ["anchor"] }

