[package]
name = "lottery"
version = "0.2.3"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
lottery-prize = { version = "0.2.2", path = "../../components/lottery-prize", features = ["cpi"] }
wallet = { version = "0.2.2", path = "../../components/wallet", features = ["cpi"] }
ephemeral-vrf-sdk = { version = "0.1.2", features = ["anchor"] }
