[package]
name = "upgrade"
version = "0.2.2"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "upgrade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
upgradeable = { version = "0.2.2", path = "../../components/upgradeable", features = ["cpi"] }
wallet = { version = "0.2.2", path = "../../components/wallet", features = ["cpi"] }
production = { version = "0.2.2", path = "../../components/production", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
